Added CustomersAndOrdersMain which uses TestContainers to run application - alternative to Docker Compose